[design] try idea psi.